@@ -1,5 +1,5 @@
 #!/usr/bin/ruby 
-# $Id: rbrss,v 1.5 2003/09/06 17:36:14 pterjan Exp $
+# $Id: rbrss,v 1.6 2003/09/15 23:47:43 pterjan Exp $
 # Copyright (C) 2003      Pascal Terjan <CMoi@tuxfamily.org>
 #
 # This program is free software; you can redistribute it and/or modify
@@ -23,6 +23,7 @@ require 'gconf2' # implies glib2
 require 'libglade2' # implies gtk2 and gnome2
 require "rexml/document"
 require 'uri'
+require "fileutils"
 include REXML  # so that we don't have to prefix everything with REXML::
 
 class RbRSS 
@@ -54,9 +55,7 @@ class RbRSS
 		Dir.mkdir(ENV["HOME"]+'/.rbrss')
 	  rescue Errno::EEXIST
 	  end
-	  f = File.new(ENV["HOME"]+'/.rbrss/config.xml','w')
-	  f.write('<?xml version="1.0" encoding="iso-8859-15"?><config></config>')
-	  f.close()
+	  FileUtils::copy_file("/usr/share/rbrss/config.xml", ENV["HOME"]+'/.rbrss/config.xml')
 	  @config = Document.new File.new(ENV["HOME"]+'/.rbrss/config.xml')
 	  # If it still fails, let's violently exit :]
 	end
