@@ -1,5 +1,7 @@
 2003-09-16 Pascal Terjan <CMoi@tuxfamily.org>
 	* Makefile: ensure make all before make install
+	* config.xml: cleanup
+	* rbrss: copy default config.xml instead of creating an empty one
 
 2003-09-06 Pascal Terjan <CMoi@tuxfamily.org>
 	* rbrss: Uncomment everything that used to segfault (Gconf and
